tests/negative/neg_pr1116_nominal_arithmetic_typed_integer.safe
package neg_pr1116_nominal_arithmetic_typed_integer

   type user_id is new integer (0 to 1000)

   id : user_id = 42
   raw : integer = 1

   bad : user_id = id + raw
